--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,15 @@
-"icons": [
-  {
-    "src": "icon.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }
-]
+{
+  "name": "Kaspi.kz",
+  "short_name": "Kaspi.kz",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    }
+  ]
+}
